# secp256k1-rust

./: Cargo.toml  README.md  shell.nix
app/: Cargo.toml
app/src/: main.rs  point.rs  secp256k1.rs  signature.rs
elliptic_curve/: Cargo.toml
elliptic_curve/src/: ecdsa.rs  lib.rs  point.rs  sign.rs  signature.rs
field_element/: Cargo.toml
field_element/src/: field_element.rs  lib.rs  pow.rs
src/: field_element.rs  hash.rs  main.rs  point.rs  pow.rs  private_key.rs  random.rs  s256_field.rs  s256_point.rs  secp256k1.rs  signature.rs
